[gd_scene load_steps=3 format=3 uid="uid://d1qqej71vdgmr"]

[ext_resource type="Script" uid="uid://cinr5u5flypjf" path="res://views/choose_bird_item.gd" id="1_gb8po"]
[ext_resource type="Texture2D" uid="uid://bruyxp7aaqxm4" path="res://assets/sprites/birds/green.png" id="2_0e2vg"]

[node name="ChooseBirdItem" type="TextureButton"]
custom_minimum_size = Vector2(128, 128)
offset_right = 128.0
offset_bottom = 128.0
script = ExtResource("1_gb8po")

[node name="MarginLine" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 128.0
offset_bottom = 128.0
color = Color(0.9254902, 0.5254902, 0.34509805, 0)

[node name="BirdIcon" type="TextureRect" parent="MarginLine"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -55.0
offset_top = -55.0
offset_right = 55.0
offset_bottom = 55.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_0e2vg")
expand_mode = 1

[node name="SkillBallContainer" type="GridContainer" parent="MarginLine"]
custom_minimum_size = Vector2(128, 64)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 64.0
grow_horizontal = 2
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0
columns = 4

[node name="StateLabel" type="Label" parent="."]
layout_mode = 0
offset_top = 94.0
offset_right = 128.0
offset_bottom = 118.0
theme_override_colors/font_color = Color(0.3529412, 0.1882353, 0, 1)
text = "NameOrLocked"
horizontal_alignment = 1
vertical_alignment = 1
